changed sample.js index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h3>This is a sample application!</h3>
 <h3>This is first change made to the file</h3>
+<h3>This is my second change made to the file.</h3>
 </body>
 </html>
