--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <h3>This is a sample application!</h3>
 <h3>This is first change made to the file</h3>
 <h3>This is my second change made to the file.</h3>
+<h2>This is a User branch</h2>
 </body>
 </html>
